@@ -1,3 +1,2 @@
 version=3
-http://sf.net/lazarus/lazarus-(.*).tar.gz debian debian/orig-tar.sh
-
+http://sf.net/lazarus/lazarus-(.*)-src.tar.bz2 debian debian/orig-tar.sh
